--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -153,11 +153,24 @@ body {
 h2 {
     font-size: 3rem;
     color: #8690AD;
+    text-decoration: none;
 }
 
 h3 {
     font-size: 1.2rem;
     color: #8690AD;
+    text-decoration: none;
+}
+
+h4 {
+    font-size: 1rem;
+    color: #117964;
+    text-decoration: none;
+}
+
+p {
+    text-decoration: none;
+    color: #64FFDA;
 }
 
 .abt-section {
@@ -216,26 +229,171 @@ h3 {
     background-size: cover;
 }
 
+
 #projects {
+    padding: 5%;
+    margin-top: 2rem;
+}
+
+.project-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 3rem;
+    text-decoration: none;
+}
+
+.coffee {
+    position: relative;
+    max-width: 300px;
+    height: 300px;
+    margin: 1.2rem;
+    flex-direction: column;
+    box-shadow: 3px 3px 3px #444;
+    transition: 0.3s ease-in-out;
+    display: flex;
+    justify-content: flex-end;
+    background-image: url("../images/coffee.jpg");
+    background-position: center;
+    background-size: cover;
+  }
+
+  .scraper {
+    position: relative;
+    max-width: 300px;
+    height: 300px;
+    margin: 1.2rem;
+    flex-direction: column;
+    box-shadow: 3px 3px 3px #444;
+    transition: 0.3s ease-in-out;
+    display: flex;
+    justify-content: flex-end;
+    background-image: url("../images/webscraper.jpg");
+    background-position: center;
+    background-size: cover;
+}
+  
+
+  .puddle {
+    position: relative;
+    max-width: 300px;
+    height: 300px;
+    margin: 1.2rem;
+    flex-direction: column;
+    box-shadow: 3px 3px 3px #444;
+    transition: 0.3s ease-in-out;
+    display: flex;
+    justify-content: flex-end;
+    background-image: url("../images/puddle.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+.content {
+    text-decoration: none;
+    background-color: rgb(10, 25, 47, 0.8);
+    text-align: center;
+}
+
+.content:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+
+#contact {
     padding: 5%;
 }
 
-.projects-container {
-    margin-top: 1rem;
+.form-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.contact-box {
+    max-width: 750px;
+    max-height: 600px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 40vh 40vh;
-    gap: 1rem;
-
-}
-
-.projects-container div {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    border: 1px solid #64FFDA;
-    color: #fff;
+    box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+    border-radius: 3px;
+    background-color: #64FFDA;
+    margin-top: 20px;
+    padding: 30px;
+
 }
 
+.field {
+    width: 100%;
+    border: 2px solid rgba(0, 0, 0, 0);
+    outline: none;
+    background-color: white;
+    padding: 0.5rem 1rem;
+    font-size: 1.1rem;
+    font-family: 'Open Sans', sans-serif;
+    margin-bottom: 22px;
+    margin-top: 10px;
+    transition: .3s;
+}
 
+.field:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+textarea {
+    min-height: 150px;
+}
+
+.button {
+    width: 80px;
+    padding: 10px;
+    background-color: #117964;
+    color: #fff;
+    font-size: 1.1rem;
+    border: none;
+    border-radius: 5%;
+    outline: none;
+    cursor: pointer;
+    transition: .3s;
+    margin-bottom: 10px;
+}
+
+.button:hover {
+    background-color: #27ae60;
+}
+
+.right img{
+    display: flex;
+    position: relative;
+    left: 8rem;
+    top: 4rem;
+}
+
+.gh-logo {
+    position: relative;
+    margin-bottom: 10px;
+    height: 50px;
+    width: 45px;
+}
+
+.med-logo{
+    height: 50px;
+    width: 60px;
+}
+
+footer {
+    width: 100%;
+    background-color: rgb(10, 25, 47);
+    text-align: center;
+}
 
 @media (max-width: 767px) {
     .navbar {
