--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -168,11 +168,6 @@ h4 {
     text-decoration: none;
 }
 
-p {
-    text-decoration: none;
-    color: #64FFDA;
-}
-
 .abt-section {
     display: grid;
     grid-template-columns: 6fr 4fr;
@@ -207,7 +202,7 @@ p {
     margin: 1rem;
     width: 50vw;
     height: 35vh;
-    box-shadow:  0px 19px 5px rgb(0 0 0 / 22%);
+    box-shadow: 0px 19px 5px rgb(0 0 0 / 22%);
     border-radius: 3%;
 }
 
@@ -243,6 +238,14 @@ p {
     text-decoration: none;
 }
 
+.project-container p {
+    text-decoration: none;
+    color: #27ae60;
+}
+
+#projects p {
+    color: #aaa;
+}
 .coffee {
     position: relative;
     max-width: 300px;
@@ -256,9 +259,9 @@ p {
     background-image: url("../images/coffee.jpg");
     background-position: center;
     background-size: cover;
-  }
+}
 
-  .scraper {
+.scraper {
     position: relative;
     max-width: 300px;
     height: 300px;
@@ -272,9 +275,9 @@ p {
     background-position: center;
     background-size: cover;
 }
-  
 
-  .puddle {
+
+.puddle {
     position: relative;
     max-width: 300px;
     height: 300px;
@@ -295,7 +298,7 @@ p {
     text-align: center;
 }
 
-.content:hover{
+.content:hover {
     cursor: pointer;
     transform: scale(1.2);
 }
@@ -325,7 +328,7 @@ p {
     text-align: center;
     box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
     border-radius: 3px;
-    background-color: #64FFDA;
+    background-color: #8dfae0;
     margin-top: 20px;
     padding: 30px;
 
@@ -370,7 +373,7 @@ textarea {
     background-color: #27ae60;
 }
 
-.right img{
+.right img {
     display: flex;
     position: relative;
     left: 8rem;
@@ -384,7 +387,7 @@ textarea {
     width: 45px;
 }
 
-.med-logo{
+.med-logo {
     height: 50px;
     width: 60px;
 }
@@ -393,6 +396,18 @@ footer {
     width: 100%;
     background-color: rgb(10, 25, 47);
     text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+        
+        .right img {
+            display: flex;
+            position: relative;
+            left: 4rem;
+            top: 4rem;
+        }
+
+    
 }
 
 @media (max-width: 767px) {
