--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: 'Golos Text', 'Open Sans', sans-serif;
     background-color: rgb(10, 25, 47);
+    text-decoration: none;
 }
 
 .navbar input[type="checkbox"],
